fixed alignment issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,12 @@ body {
   box-shadow: 0 0 250px 25px rgba(0,0,0,1) inset;
 }
 
+.root {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 button:focus {
   outline:0;
 }
